# content-foundry

./: .env.example  .gitignore  AI_Content_Marketing_Engine_BUILD_SPEC.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: llm.py
backend/agents/: plan_review.py  planner.py  publisher.py  qa_agent.py  tools.py  trend_researcher.py  writers.py
backend/api/: __init__.py  main.py  models.py
backend/graph/: builder.py  state.py
backend/publishing/: __init__.py  publisher_client.py
backend/publishing/storyblok/: __init__.py  client.py  config.py  mapper.py  markdown_blocks.py  schema.py  service.py
backend/rag/: ingest.py  retriever.py
tests/: conftest.py  test_graph.py  test_ingest.py  test_plan_review.py  test_qa_agent.py  test_storyblok_publishing.py  test_tools.py
